jEdit 5.7 version history
       (changes since jEdit 5.6.0)
:encoding=UTF-8:

{{{ Version 5.7pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova for contributing to this release.

{{{ Bug Fixes

- VFSManager.canReadFile() was returning true only for directories (#4102 - Matthieu Casanova)

}}}
{{{ Miscellaneous


}}}
{{{ API Changes


}}}
{{{ Editing


}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: